--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,57 +1,16 @@
-name: tailscale
+name: hyphae
 base: core24
-version: 1.78.3
+version: "1.0"
 license: BSD-3-Clause
-grade: stable
+grade: devel
 confinement: strict
-contact: solutions-engineering@lists.canonical.com
-issues: https://github.com/canonical/tailscale-snap/issues
-source-code: https://github.com/canonical/tailscale-snap
-summary: The easiest, most secure way to use WireGuard and 2FA
+summary: Cluster SDN underlay built on Tailscale
 description: |
-  A secure network that just works Zero config VPN.
+  Cluster SDN underlay built on Tailscale
 
-  Installs on any device in minutes, manages firewall rules for you, and works from anywhere.
-
-  After installing this snap, visit the Tailscale documentation at https://tailscale.com/kb/1017/install to get started.
-
-  **Confinement**
-
-  The snap is strictly confined, and this currently brings some limitations.
-
-  * `tailscale ssh` will not work.
-  * `ssh` over the tailscale network will not work if tailscale ssh mode is enabled (ie. if you have configured `tailscale set --ssh`). To fix this, disable tailscale ssh: `tailscale set --ssh=false`.
-  * `tailscale update` will not work: to update tailscale, please refresh the snap.
-  * `tailscale file cp` and `tailscale cert` will only work with file paths accessible to the snap, for example `/home/ubuntu/snap/tailscale/common/foo.txt`. See https://snapcraft.io/docs/data-locations for a full list of paths.
-  * `tailscale drive share` will not work (the client command succeeds, the share is registered, but you will see errors in tailscaled logs and the share will not be accessible).
-
-  **Security**
-
-  Please see https://tailscale.com/security for information about security of Tailscale itself.
-  For this snap, it is strictly confined, to limit the impact if the binaries are compromised.
-  The following interfaces are connected for tailscaled (the daemon):
-
-  * network: for network access, this is required as tailscaled must communicate with external services (coordination server, etc.) and manage network traffic
-  * network-bind: required because tailscaled binds to a UDP port for wireguard / peer-to-peer traffic.
-  * firewall-control: required for enforcing port-level ACLs through iptables.
-  * network-control: required for configuring the network and access to /dev/net/tun. Tailscaled needs this to set up networking rules for the wiregard config and such (routing, attaching networks, etc.).
-  * sys-devices-virtual-info: a custom system-files read-only interface for files tailscaled needs to determine the platform it's running on. Without this, tailscaled will run, but may have issues in some environments.
-
-  And for tailscale (the client tool):
-
-  * network: general network access.
-  * network-bind: required for `tailscale web`.
-
-  The snap config or hooks do not directly use any cryptographic functions.
-
-  **Support**
-
-  If any malfunction with Tailscale features is observed, where this issue is not observed in Tailscale installed from a source other than the snap, please open an issue at https://github.com/canonical/tailscale-snap/issues .
-  To report something related to Tailscale itself, please see https://github.com/tailscale/tailscale/issues .
-
-platforms:
-  amd64:
-  arm64:
+#platforms:
+#  amd64:
+#  arm64:
 
 plugs:
   sys-devices-virtual-dmi-ids:
@@ -93,7 +52,7 @@ apps:
 parts:
   tailscale:
     source: https://github.com/tailscale/tailscale.git
-    source-tag: v$SNAPCRAFT_PROJECT_VERSION
+    source-tag: v1.78.1
     plugin: go
     build-snaps:
       - go
